# astar-frame

./: Cargo.toml
chain-extensions/dapps-staking/: Cargo.toml
chain-extensions/types/dapps-staking/: Cargo.toml
chain-extensions/types/xvm/: Cargo.toml
chain-extensions/xvm/: Cargo.toml
frame/block-reward/: Cargo.toml
frame/collator-selection/: Cargo.toml
frame/contracts-migration/: Cargo.toml
frame/custom-signatures/: Cargo.toml
frame/dapps-staking/: Cargo.toml
frame/pallet-xcm/: Cargo.toml
frame/pallet-xvm/: Cargo.toml
frame/xc-asset-config/: Cargo.toml
precompiles/assets-erc20/: Cargo.toml
precompiles/dapps-staking/: Cargo.toml
precompiles/sr25519/: Cargo.toml
precompiles/substrate-ecdsa/: Cargo.toml
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/xcm/: Cargo.toml
precompiles/xvm/: Cargo.toml
primitives/xcm/: Cargo.toml
