[package]
name = "pallet-chain-extension-dapps-staking"
version = "1.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "dApps Staking chain extension for WASM contracts"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = "0.4.16"
num-traits = { version = "0.2", default-features = false }
pallet-contracts = { workspace = true }
pallet-contracts-primitives = { workspace = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Astar
dapps-staking-chain-extension-types = { workspace = true }
pallet-dapps-staking = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"dapps-staking-chain-extension-types/std",
	"frame-support/std",
	"frame-system/std",
	"num-traits/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-dapps-staking/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]
