[package]
name = "pallet-block-reward"
version = "2.2.2"
authors = ["Stake  Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/Astar"
description = "FRAME pallet for managing block reward issuance & distribution"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136" }

frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"scale-info/std",
	"sp-std/std",
	"serde/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
