[package]
authors = ["Anonymous"]
description = "Simple staking pallet with a fixed stake."
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-collator-selection"
readme = "README.md"
repository = "https://github.com/paritytech/cumulus/"
version = "3.3.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { default-features = false, features = ["derive"], package = "parity-scale-codec", version = "3.0.0" }
log = { version = "0.4.16", default-features = false }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-authorship = { workspace = true }
pallet-session = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-tracing = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"rand/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"pallet-aura/std",
]

try-runtime = ["frame-support/try-runtime"]
