[package]
name = "pallet-contracts-migration"
version = "1.0.0"
authors = ["Stake  Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/Astar"
description = "FRAME pallet for managing multi-block pallet contracts storage migration"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-contracts = { workspace = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-contracts/std",
]
try-runtime = ["frame-support/try-runtime"]
