[package]
name = "pallet-custom-signatures"
version = "4.6.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network/"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "FRAME pallet for user defined extrinsic signatures"

[dependencies]
codec = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
serde = { version = "1.0.140", features = ["derive"], optional = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
assert_matches = "1.3.0"
hex-literal = "0.3.4"
libsecp256k1 = "0.7.0"
pallet-balances = { workspace = true }
sp-keyring = { workspace = true }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
try-runtime = ["frame-support/try-runtime"]
