[package]
name = "pallet-xvm"
authors = ["Stake Technologies"]
edition = "2021"
version = "0.2.1"

[dependencies]
impl-trait-for-tuples = "0.2"
log = { version = "0.4", default-features = false }
serde = { version = "1.0.106", optional = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

# EVM support 
pallet-evm = { workspace = true, optional = true }

# Substrate WASM VM support
pallet-contracts = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = ["std"]
evm = [
	"pallet-evm",
]
wasm = [
	"pallet-contracts",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-contracts/std",
	"pallet-evm/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

runtime-benchmarks = [
	"frame-benchmarking",
]
try-runtime = ["frame-support/try-runtime"]
