[package]
name = "pallet-evm-precompile-assets-erc20"
authors = ["Stake Technologies", "PureStake"]
description = "A Precompile to expose a Assets pallet through an ERC20-compliant interface."
edition = "2021"
version = "0.5.2"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
slices = "0.2.0"

precompile-utils = { workspace = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = { version = "0.99" }
serde = { version = "1.0.140" }
sha3 = "0.10.1"

precompile-utils = { workspace = true, features = ["testing"] }

codec = { package = "parity-scale-codec", version = "3.0.0", features = ["max-encoded-len"] }
pallet-timestamp = { workspace = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-evm/std",
	"pallet-balances/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
