[package]
name = "pallet-precompile-dapps-staking"
version = "3.6.3"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "dApps Staking EVM precompiles"

[dependencies]
codec = { workspace = true }
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Astar
pallet-dapps-staking = { workspace = true }
precompile-utils = { workspace = true, default-features = false }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = "0.99"
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
precompile-utils = { workspace = true, features = ["testing"] }
serde = "1.0.140"
sha3 = "0.10.1"
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-dapps-staking/std",
	"pallet-evm/std",
	"precompile-utils/std",
]
