[package]
name = "pallet-evm-precompile-sr25519"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "SR25519 crypto support for EVM."
edition = "2021"
version = "1.2.1"

[dependencies]
log = "0.4.17"
num_enum = { version = "0.5.3", default-features = false }
precompile-utils = { workspace = true, default-features = false }

# Substrate
codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = { workspace = true }
serde = "1.0.140"

precompile-utils = { workspace = true, features = ["testing"] }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"pallet-evm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
]
