[package]
name = "precompile-utils"
authors = ["StakeTechnologies", "PureStake"]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.4.3"

[dependencies]
# There's a problem with --all-features when this is moved under dev-deps
evm = { workspace = true, features = ["std"], optional = true }
impl-trait-for-tuples = "0.2.2"
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# Polkadot / XCM
xcm = { workspace = true }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"evm/std",
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"xcm/std",
]
testing = ["similar-asserts", "std"]
