[package]
name = "pallet-evm-precompile-xcm"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Basic XCM support for EVM."
edition = "2021"
version = "0.9.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
pallet-evm-precompile-assets-erc20 = { workspace = true }
pallet-xcm = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-executor = { workspace = true }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = "2.1.0"
serde = "1.0.140"

precompile-utils = { workspace = true, features = ["testing"] }

pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }
xcm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-evm/std",
	"pallet-xcm/std",
	"pallet-evm-precompile-assets-erc20/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
	"xcm/std",
	"xcm-executor/std",
]
