[package]
name = "pallet-evm-precompile-xvm"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Cross-VM call support for EVM."
edition = "2021"
version = "0.1.0"

[dependencies]
log = "0.4.16"
num_enum = { version = "0.5.3", default-features = false }
pallet-xvm = { workspace = true }
precompile-utils = { workspace = true }

# Substrate
codec = { workspace = true, features = ["max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }

[dev-dependencies]
derive_more = "0.99"
hex-literal = "0.3.4"
scale-info = { workspace = true }
serde = "1.0.100"

precompile-utils = { workspace = true, features = ["testing"] }

pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"pallet-xvm/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
	"sp-io/std",
]
