[package]
name = "dapps-staking-chain-extension-types"
version = "1.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "Types definitions for dapps-staking chain-extension"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
frame-support = { workspace = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
