[package]
name = "dapps-staking-chain-extension-types"
version = "1.1.0"
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"
description = "Types definitions for dapps-staking chain-extension"

[dependencies]
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]
